@@ -13,7 +13,7 @@ CDO - Climate Data Operators
 
 Operators:
 
-     There are more than 350 operators available. Read OPEATORS for
+     There are more than 400 operators available. Read OPEATORS for
      a short overview of all operators.
 
 Documentation:
