@@ -2,7 +2,7 @@
   This file is part of CDO. CDO is a collection of Operators to
   manipulate and analyse Climate model Data.
 
-  Copyright (C) 2003-2007 Uwe Schulzweida, Uwe.Schulzweida@zmaw.de
+  Copyright (C) 2003-2008 Uwe Schulzweida, Uwe.Schulzweida@zmaw.de
   See COPYING file for copying and redistribution conditions.
 
   This program is free software; you can redistribute it and/or modify
@@ -31,7 +31,7 @@
 void *Diff(void *argument)
 {
   static char func[] = "Diff";
-  int DIFF, DIFFV;
+  int DIFF, DIFFV, SDIFF;
   int operatorID;
   int i;
   int indg;
@@ -57,6 +57,7 @@ void *Diff(void *argument)
 
   DIFF  = cdoOperatorAdd("diff",  0, 0, NULL);
   DIFFV = cdoOperatorAdd("diffv", 0, 0, NULL);
+  SDIFF = cdoOperatorAdd("sdiff", 0, 0, NULL);
 
   operatorID = cdoOperatorID();
 
@@ -79,7 +80,7 @@ void *Diff(void *argument)
   if ( operatorID == DIFFV )
     fprintf(stdout, "               Date  Time Varname     Level    Size    Miss :"
 	    " S Z      Absdiff     Reldiff\n");
-  else
+  else if ( operatorID == DIFF )
     fprintf(stdout, "               Date  Time Code  Level    Size    Miss :"
 	    " S Z      Absdiff     Reldiff\n");
 
@@ -116,16 +117,19 @@ void *Diff(void *argument)
 	  missval1 = vlistInqVarMissval(vlistID1, varID);
 	  missval2 = vlistInqVarMissval(vlistID2, varID);
 
-	  if ( operatorID == DIFFV ) vlistInqVarName(vlistID1, varID, varname);
+	  if ( operatorID == DIFFV || operatorID == DIFF )
+	    {
+	      if ( operatorID == DIFFV ) vlistInqVarName(vlistID1, varID, varname);
 
-	  if ( operatorID == DIFFV )
-	    fprintf(stdout, "%6d : %4.4d-%2.2d-%2.2d %2.2d:%2.2d %-8s ",
-		    indg, year, month, day, hour, minute, varname);
-	  else
-	    fprintf(stdout, "%6d : %4.4d-%2.2d-%2.2d %2.2d:%2.2d %3d",
-		    indg, year, month, day, hour, minute, code);
+	      if ( operatorID == DIFFV )
+		fprintf(stdout, "%6d : %4.4d-%2.2d-%2.2d %2.2d:%2.2d %-8s ",
+			indg, year, month, day, hour, minute, varname);
+	      else if ( operatorID == DIFF )
+		fprintf(stdout, "%6d : %4.4d-%2.2d-%2.2d %2.2d:%2.2d %3d",
+			indg, year, month, day, hour, minute, code);
 
-	  fprintf(stdout, " %7g ", zaxisInqLevel(zaxisID, levelID));
+	      fprintf(stdout, " %7g ", zaxisInqLevel(zaxisID, levelID));
+	    }
 
 	  streamReadRecord(streamID1, array1, &nmiss1);
 	  streamReadRecord(streamID2, array2, &nmiss2);
@@ -134,8 +138,6 @@ void *Diff(void *argument)
 	  relm = 0.0;
 	  dsgn = FALSE;
           zero = FALSE;
-
-	  fprintf(stdout, "%7d %7d :", gridsize, MAX(nmiss1, nmiss2));
 
 	  for ( i = 0; i < gridsize; i++ )
 	    {
@@ -157,8 +159,14 @@ void *Diff(void *argument)
 		}
 	    }
 
-	  fprintf(stdout, " %c %c ", dsgn ? 'T' : 'F', zero ? 'T' : 'F');
-	  fprintf(stdout, "%#12.5g%#12.5g\n", absm, relm);
+	  if ( operatorID == DIFFV || operatorID == DIFF )
+	    {
+	      fprintf(stdout, "%7d %7d :", gridsize, MAX(nmiss1, nmiss2));
+
+	      fprintf(stdout, " %c %c ", dsgn ? 'T' : 'F', zero ? 'T' : 'F');
+	      fprintf(stdout, "%#12.5g%#12.5g\n", absm, relm);
+	    }
+
 	  ngrec++;
 	  if ( absm > 0     || relm > 0     ) ndrec++;
 	  if ( absm > 1.e-3 || relm > 1.e-3 ) nd2rec++;
