@@ -2,7 +2,7 @@
   This file is part of CDO. CDO is a collection of Operators to
   manipulate and analyse Climate model Data.
 
-  Copyright (C) 2003-2007 Uwe Schulzweida, Uwe.Schulzweida@zmaw.de
+  Copyright (C) 2003-2008 Uwe Schulzweida, Uwe.Schulzweida@zmaw.de
   See COPYING file for copying and redistribution conditions.
 
   This program is free software; you can redistribute it and/or modify
@@ -237,7 +237,7 @@ void *Wct(void *argument);
 #define  CopyOperators          {"copy", "selall"}
 #define  Del29febOperators      {"del29feb"}
 #define  DetrendOperators       {"detrend"}
-#define  DiffOperators          {"diff", "diffv"}
+#define  DiffOperators          {"diff", "diffv", "sdiff"}
 #define  Echam5iniOperators     {"read_e5ml",  "read_e5res", \
                                  "write_e5ml", "write_e5res"}
 #define  EnlargeOperators       {"enlarge"}
