@@ -7,6 +7,7 @@
 	* New operator: del29feb to delete the 29. February [request: Etienne Tourigny]
 	* New operator: zaxisdes
 	* Exprf: using MT safe version of bison and flex (bug fix) [report: Claas Teichmann]
+	* Vertint: support for data on hybrid half-level
 	* Vertint: support for GME data [request: Luis Kornblueh]
 	* Vertint: bug fix for input with time constant fields
 	* Outputgmt: use grid_mask if present
